--- a/fake-news-detection/requirements.txt
+++ b/fake-news-detection/requirements.txt
@@ -1,1 +1,33 @@
 # Python dependencies
+# Core ML and Data Processing
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.15.0
+
+# Deep Learning
+tensorflow==2.13.0
+torch==2.0.1
+transformers==4.33.2
+
+# NLP Libraries
+nltk==3.8.1
+spacy==3.6.1
+textblob==0.17.1
+wordcloud==1.9.2
+
+# Web Framework
+streamlit==1.25.0
+flask==2.3.3
+
+# Utilities
+joblib==1.3.2
+pickle-mixin==1.0.2
+tqdm==4.66.1
+python-dotenv==1.0.0
+
+# Visualization
+lime==0.2.0.1
+shap==0.42.1
